# NVIDIADemo

./: .ycm_extra_conf.py  CMakeLists.glm.txt.in  CMakeLists.libsdl.txt.in  CMakeLists.txt
cmake/: c++17.cmake  glm.cmake  libsdl.cmake
include/: CMakeLists.txt
include/nvidia_demo/: CMakeLists.txt  application.h  camera.h  declspec.h  gl_functions.h  idrawable.h  interleaved_vertex_buffer.h  irenderable.h  iscene.h  itransformable.h  platform.h  rainbow_square.h  resource_loader.h  shader.h  shader_program.h  simple_scene.h  simpletriangle_scene.h  square.h  square_scene.h  stream_helpers.h  textured_square.h  textured_triangle.h  textures.h  triangle.h  triangle_stream.h
lib/: CMakeLists.txt  application.cpp  camera.cpp  flashing_triangle.cpp  gl_functions.cpp  idrawable.cpp  interleaved_vertex_buffer.cpp  irenderable.cpp  iscene.cpp  itransformable.cpp  rainbowsquare_scene.cpp  resource_loader.cpp  shader.cpp  shader_program.cpp  simple_scene.cpp  simple_triangle.cpp  simpletriangle_scene.cpp  square.cpp  square_scene.cpp  stream_helpers.cpp  textured_square.cpp  textured_triangle.cpp  textures.cpp  triangle.cpp  triangle_stream.cpp
lib/shaders/: simple_square.frag
lib/shaders/150/: flashing_triangle.frag  square.frag  textured_triangle.vert
tests/: CMakeLists.txt
