install(FILES
  ./application.h
  ./declspec.h
  ./flashing_triangle.h
  ./gl_functions.h
  ./idrawable.h
  ./interleaved_vertex_buffer.h
  ./iscene.h
  ./platform.h
  ./shader.h
  ./shader_program.h
  ./simple_scene.h
  ./simple_triangle.h
  ./simpletriangle_scene.h
  DESTINATION include/nvidia_demo
)
