install(FILES
  ./application.h
  ./camera.h
  ./declspec.h
  ./gl_functions.h
  ./idrawable.h
  ./interleaved_vertex_buffer.h
  ./irenderable.h
  ./iscene.h
  ./itransformable.h
  ./platform.h
  ./shader.h
  ./shader_program.h
  ./stream_helpers.h
  ./textured_triangle.h
  ./textures.h
  ./triangle.h
  DESTINATION include/nvidia_demo
)
